---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E303 [*] Too many blank lines (2)
   --> E30.py:617:2
    |
617 |     def method2():
    |     ^^^
618 |         return 22
619 | # end
    |
help: Remove extraneous blank line(s)
615 - 
616 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:644:5
    |
644 |     # arbitrary comment
    |     ^^^^^^^^^^^^^^^^^^^
645 |
646 |     def inner():  # E306 not expected (pycodestyle detects E306)
    |
help: Remove extraneous blank line(s)
642 - 
643 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:656:5
    |
656 |     # arbitrary comment
    |     ^^^^^^^^^^^^^^^^^^^
657 |     def inner():  # E306 not expected (pycodestyle detects E306)
658 |         pass
    |
help: Remove extraneous blank line(s)
654 - 
655 - 
    |

E303 [*] Too many blank lines (3)
   --> E30.py:667:1
    |
667 | print()
    | ^^^^^
668 | # end
    |
help: Remove extraneous blank line(s)
664 - 
665 - 
666 - 
    |

E303 [*] Too many blank lines (3)
   --> E30.py:676:1
    |
676 | # comment
    | ^^^^^^^^^
677 |
678 | print()
    |
help: Remove extraneous blank line(s)
673 - 
674 - 
675 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:687:5
    |
687 |     # comment
    |     ^^^^^^^^^
help: Remove extraneous blank line(s)
685 - 
686 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:690:5
    |
690 |     # another comment
    |     ^^^^^^^^^^^^^^^^^
691 |
692 |     print()
    |
help: Remove extraneous blank line(s)
688 - 
689 - 
    |

E303 [*] Too many blank lines (3)
   --> E30.py:701:1
    |
701 | / """This class docstring comes on line 5.
702 | | It gives error E303: too many blank lines (3)
703 | | """
    | |___^
704 |   # end
    |
help: Remove extraneous blank line(s)
698 - 
699 - 
700 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:713:5
    |
713 |     def b(self):
    |     ^^^
714 |         pass
715 | # end
    |
help: Remove extraneous blank line(s)
711 - 
712 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:723:5
    |
723 |     a = 2
    |     ^
724 | # end
    |
help: Remove extraneous blank line(s)
721 - 
722 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:731:5
    |
731 |     # comment
    |     ^^^^^^^^^
help: Remove extraneous blank line(s)
729 - 
730 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:734:5
    |
734 |     # another comment
    |     ^^^^^^^^^^^^^^^^^
735 |
736 |     def test(self): pass
    |
help: Remove extraneous blank line(s)
732 - 
733 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:748:5
    |
748 |     def b(self):
    |     ^^^
749 |         pass
750 | # end
    |
help: Remove extraneous blank line(s)
746 - 
747 - 
    |

E303 [*] Too many blank lines (2)
   --> E30.py:758:5
    |
758 |     pass
    |     ^^^^
759 | # end
    |
help: Remove extraneous blank line(s)
756 - 
757 - 
    |
